# acoular

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml   .lycheeignore  .ruff.toml  .travis.yaml  .travis.yml  .zenodo.json  AUTHORS.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CalibHelper.py  LICENSE  MANIFEST.in  README.md  README.rst  ResultExplorer.py  ResultExplorerWin.py  build_conda.sh  errorlog.txt  example1.py  example2.py  example3.py  example4.py  example5.py  example7.py  example_script.py  exe2conda.bat  genindex.html  importtest.py  index.html  make_bdist_wininst.bat  noxfile.py  objects.inv  py-modindex.html  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  auto_assign.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_report.yml  feature_request.yml
.github/workflows/: assignee_lottery.yml  auto-assign_pull_request.yml  auto-assign_pull_request_reviewer.yml  build_docs.yml  check_deployments.yml  checks.yml  conda.yml  cron_jobs.yml  docs-seed.yml  docs.yml  github.yml  labeler.yml  linting.yml  orga-ci.yml  pypi.yml  python-package.yml  regtest.yml  regtest_inspect.yml  release.yml  reviewer_assignee_lottery.yml  testpypi.yml  tests.yml
_downloads/017ed624f363c751e8a2fd678c0e460c/: example_rotating_point_source.py
_downloads/08cf90288810def8311f232b583484f2/: example_sample_splitter_bufferhandling.py
_downloads/0933bdfcc7700f0c9f92932c513d6f87/: example_calib.xml
_downloads/0afcd9f30191339e1d758bfb426fbf77/: three_sources.py
_downloads/15a1ecbef06305cd6c68bb4b8cbf70ba/: example_sample_splitter_bufferhandling.ipynb
_downloads/1d9b19b45bb033764b0014b8860f7bd1/: example_sectors_and_integration.py
_downloads/2457130837ae71eb98075819c9606f4b/: example_grids.py
_downloads/3010af31b5cc8ff4d05fba2037594c48/: example_three_sources.ipynb
_downloads/30f36cdf46c2c30c1a4cccbfff3f3cb7/: example_filter.py
_images/: inheritance-01358a52f5fb3565b899fd804444233ea51aff06.png.map  inheritance-15be2cb93a6945f689e0a6dfe74d3935d1f10a2f.png.map  inheritance-177c8ad396848c4302e897e6b3e783cfecaf5f79.png.map  inheritance-3900a116529604aea62c4bdb4002f0198fc967c1.png.map  inheritance-94a97b44c05455c321f24f7134bc172cce1d4212.png.map  inheritance-e8047caf3cb9b4cb8b34da76911174a283e04407.png.map
_static/: documentation_options.js  haikuac.css  pygments.css
acoular/: __init__.py  base.py  beamformer.cpp  beamformer.pyd  beamformer_build_openmp.py  cachemanager.py  calib.py  config.py  configuration.py  deprecation.py  directivity.py  environments.py  fastFuncs.py  fbeamform.py  fileimport.py  fprocess.py  grids.py  h5cache.py  h5files.py  internal.py  microphones.py  nidaqimport.py  numpy_config.py  plot_utils.py  plots.mplstyle  process.py  rotating_sj.py  sdinput.py  signals.py  sources.py  spectra.py  spectrum.py  tbeamform.py  tfastfuncs.py  tools.py  tprocess.py  traitsviews.py  trajectory.py  version.py
api_ref/: index.html
auto_examples/: index.html  sg_execution_times.html
beamfpy/: __init__.py  beamformer.pyd  beamformer_build_new.py  beamformer_build_new_opteron2.py  beamformer_build_openmp.py  beamfpy.py  build.tmp  cachemanager.py  calib.py  create_beamfpy_doc.bat  environments.py  fbeamform.py  fileimport.py  grids.py  h5cache.py  h5cache.py.old  internal.py  microphones.py  mplwidget.py  nidaqimport.py  nidaqimport.py.old  signals.py  sources.py  sources.py.old  spectra.py  spectrum.py  tbeamform.py  timedomain.py  tprocess.py  tprocess.py.old  trajectory.py
commands/: build-docs.html  demo.html  doctests.html  editable-install.html  environment.html  full-install.html  install.html  ruff-fix.html  ruff.html  tests.html
contributing/: build-docs.html  checklist.html  deprecation.html  documentation.html  index.html  install.html  pull_request.html  quality.html  release.html
docs/: Makefile  conf.py  gen_rst.py  generate_switcher_json.py  index.rst
examples/: README.txt  acoular_demo.py  all_bf.sav  basic_beamformer_example.py  example1.py  example2.py  example3.py  example3_mayavi.py  example4.py  example5.py  example6.py  example7.py  example_3D_beamforming.html  example_3D_beamforming.py  example_GenericSignal.py  example_SampleSplitter_bufferhandling.py  example_SampleSplitter_multithreading.py  example_airfoil_in_open_jet_beamforming.html  example_airfoil_in_open_jet_beamforming.py  example_airfoil_in_open_jet_cmf.html  example_airfoil_in_open_jet_steering_vectors.html  example_airfoil_in_open_jet_time_beamforming.py  example_evaluate.py  example_filter.py  example_power_spectra_import.py  example_rotating_point_source.html  example_rotating_point_source.py  example_sectors_and_intergration.py  example_tools.py  index.html  three_sources.py
examples_do_not_commit/: ambisonic_receiver.py  find_direction.py  plot.py
get_started/: index.html
install/: index.html  tools.html
literature/: index.html
news/: index.html
recipe.local/: meta.yaml  run_test.sh
recipe.local_py27/: meta.yaml
recipe.local_py34/: meta.yaml  run_test.sh
recipe.local_py35/: meta.yaml
recipe.local_py36/: meta.yaml
recipe.local_py37/: meta.yaml
recipe.local_py38/: meta.yaml
recipe.local_py39/: meta.yaml
scripts/: plot_examples.py
tests/: SampleSplitter_example1.py  SampleSplitter_example2.py  all_bfNumba.sav  conftest.py  example1_time.py  example2_time.py  functionalBeamformer.py  plot_examples.py  plotband.py  precisionTest.py  run_tests.sh  setup.py  sources_test_time.py  test.npy  test_beamformer_results.py  test_classes.py  test_digest.py  test_environments.py  test_example1.py  test_fft.py  test_fprocess.py  test_grid.py  test_integrate.py  test_process.py  test_sdinput.py  test_showcase.py  test_signals.py  test_sources.py  test_spectra.py  test_tbeamform.py  test_timecache.py  test_tools_utils.py  test_tprocess.py  test_tprocess_deprecated.py  test_traj_beamformer_results.py  utils.py  validationOfBeamformerFuncsPOSTAcoularIntegration.py  validationOfBeamformerFuncsPREeAcoularIntegration.py
user_guide/: get_started.html  index.html
(+961 files in other folders)
