#------------------------------------------------------------------------------
# Copyright (c) Acoular Development Team.
#------------------------------------------------------------------------------

[project]
name = "acoular"
dynamic = ["version"]
description = "Python library for acoustic beamforming"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "acoustics",
    "beamforming",
    "microphone array"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "numba",
    "scipy>=1.1.0",
    "scikit-learn",
    "tables",
    "traits>=6.0",
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Ennes Sarradj", email = "ennes.sarradj@tu-berlin.de"},
    {name = "Gert Herold", email = "gert.herold@tu-berlin.de"},
    {name = "Mikolaj Czuchaj", email = "mikolaj.czuchaj@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]

[project.optional-dependencies]
full = [
    "matplotlib",
    "pylops",
    "sounddevice",
]

docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "pickleshare",
    "sounddevice",
    "sphinx",
    "sphinx_gallery",
    "sphinxcontrib-bibtex",
    "setuptools", # unfortunately still needed for sphinxcontrib-bibtex (https://github.com/mcmtroffaes/sphinxcontrib-bibtex/issues/345)
]

tests = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-regtest",
    "pytest-cases",
    "pytest-env",
    "pytest-profiling",
    "sounddevice",
    "pylops",
    "traitsui",
    "h5py",
    "PyYAML",
]

dev = [
    "acoular[docs,full,tests]",
    "hatch",
    "ruff==0.8.1", # remember to change version pin in docs/source/contributing/install.rst
]

[project.urls]
homepage = "https://acoular.org"
documentation = "https://acoular.org"
repository = "https://github.com/acoular/acoular"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "acoular/version.py"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.8.1"]
config-path = [".ruff.toml"]

[tool.hatch.envs.docs]
python = "3.13"
dependencies = [
    "acoular[docs]"
]

[tool.hatch.envs.docs.scripts]
build = ["cd docs && make html"]

[tool.hatch.envs.tests]
dependencies = [
    "acoular[tests]"
]

[[tool.hatch.envs.tests.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.tests.scripts]
import = ["python -c \"import acoular\""]
test = ["python -m pytest -v --durations=10 tests"]
reset_regtest = ["python -m pytest -v --regtest-reset tests/regression"]
profile = ["test --profile-svg"] 
demo = ["python -c \"import acoular; acoular.demo.acoular_demo.run()\""]
coverage = [
    "test --cov=acoular --cov-report html --cov-report term-missing",
    "python -m pytest -v --cov=acoular --cov-report html --cov-report term-missing --cov-append --doctest-modules acoular",
    ]
doctest = ["python -m pytest --doctest-modules acoular"]

[tool.hatch.envs.tests.overrides]
platform.linux.pre-install-commands = ['cat /proc/cpuinfo']
platform.macos.pre-install-commands = ['sysctl -a machdep.cpu']
platform.windows.pre-install-commands = ['systeminfo']


[tool.hatch.build.targets.sdist]
include = [
  "/acoular",
]

[tool.hatch.build.targets.wheel]
packages = ["acoular"]


[tool.pytest.ini_options]
filterwarnings = [
    "error", # treat warnings as errors
    "ignore::pluggy.PluggyTeardownRaisedWarning", # raised internally by pytest-regtest
    "ignore:numpy.core.multiarray is deprecated*:DeprecationWarning", # raised internally by pylops
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:The TBB threading layer requires TBB version:numba.core.errors.NumbaWarning", # raised internally by numba
    "ignore:FNV hashing is not implemented in Numba:UserWarning", # raised internally by numba
    "ignore:`scipy.special.sph_harm` is deprecated*:DeprecationWarning", # raised by SciPy
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]
env = [
    "OPENBLAS_NUM_THREADS=1"
]

[tool.coverage.run]
omit = [
    "acoular/demo/acoular_demo.py",
    "acoular/base.py",
    "acoular/tfastfuncs.py",
    "acoular/fastFuncs.py",
    "acoular/deprecation",
    ]
