#------------------------------------------------------------------------------
# Copyright (c) Acoular Development Team.
#------------------------------------------------------------------------------

[project]
name = "acoular"
dynamic = ["version"]
description = "Python library for acoustic beamforming"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "acoustics",
    "beamforming",
    "microphone array"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numba",
    "numpy",
    "scikit-learn",
    "scipy >= 1.1.0, != 1.16.*", # scipy 1.16 has a bug in signal that causes issues with Acoular
    "tables",
    "traits >= 6.0",
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Ennes Sarradj", email = "ennes.sarradj@tu-berlin.de"},
    {name = "Gert Herold", email = "gert.herold@tu-berlin.de"},
    {name = "Mikolaj Czuchaj", email = "mikolaj.czuchaj@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]

[project.optional-dependencies]
full = [
    "matplotlib",
    "pylops",
    "sounddevice",
]

[dependency-groups]
docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "pickleshare",
    "pydata-sphinx-theme",
    "sounddevice",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "setuptools", # unfortunately still needed for sphinxcontrib-bibtex (https://github.com/mcmtroffaes/sphinxcontrib-bibtex/issues/345)
]

lint = ["ruff==0.14.2"]

test = [
    "h5py",
    "pylops",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-regtest",
    "pytest-cases",
    "pytest-env",
    "pytest-profiling",
    "PyYAML",
    "sounddevice",
    "traitsui",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

[project.urls]
homepage = "https://acoular.org"
documentation = "https://acoular.org"
repository = "https://github.com/acoular/acoular"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "acoular/version.py"


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v --durations=10 --cov-report=html --cov-report=term-missing --cov-report=markdown-append:$GITHUB_STEP_SUMMARY"
filterwarnings = [
    "error", # treat warnings as errors
    "ignore::pluggy.PluggyTeardownRaisedWarning", # raised internally by pytest-regtest
    "ignore:numpy.core.multiarray is deprecated*:DeprecationWarning", # raised internally by pylops
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:The TBB threading layer requires TBB version:numba.core.errors.NumbaWarning", # raised internally by numba
    "ignore:FNV hashing is not implemented in Numba:UserWarning", # raised internally by numba
    "ignore:`scipy.special.sph_harm` is deprecated*:DeprecationWarning", # raised by SciPy
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]
env = [
    "OPENBLAS_NUM_THREADS=1",
]

[tool.coverage.run]
omit = [
    "acoular/demo",
    "acoular/base.py",
    "acoular/tfastfuncs.py",
    "acoular/fastFuncs.py",
    "acoular/deprecation",
]
