#------------------------------------------------------------------------------
# Copyright (c) Acoular Development Team.
#------------------------------------------------------------------------------

[project]
name = "acoular"
dynamic = ["version"]
description = "Python library for acoustic beamforming"
requires-python = ">=3.11,<3.15"  # remember to also change install/index.rst!
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "acoustics",
    "beamforming",
    "microphone array"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numba",
    "numpy",
    "scikit-learn",
    "scipy >= 1.16.1; python_version > '3.10'",
    "tables",
    "traits >= 6.0",
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Ennes Sarradj", email = "ennes.sarradj@tu-berlin.de"},
    {name = "Gert Herold", email = "gert.herold@tu-berlin.de"},
    {name = "Mikolaj Czuchaj", email = "mikolaj.czuchaj@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]

[project.optional-dependencies]
full = [
    "matplotlib",
    "pylops",
    "sounddevice",
]

[dependency-groups]
docs = ["acoular-sphinx @ git+https://github.com/acoular/ci.git@sphinx-v1.1#subdirectory=packages/acoular-sphinx"]

lint = ["acoular-ruff @ git+https://github.com/acoular/ci.git@ruff-v1.0"]

tests = [
    "h5py",
    "diff_cover",
    "pylops",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-regtest",
    "pytest-cases",
    "pytest-env",
    "pytest-profiling",
    "PyYAML",
    "sounddevice",
    "traitsui",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "tests"},
]

[project.urls]
homepage = "https://acoular.org"
documentation = "https://acoular.org"
repository = "https://github.com/acoular/acoular"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "acoular/version.py"

[tool.hatch.build.targets.sdist]
include = ["acoular"]

[tool.hatch.build.targets.wheel]
include = ["acoular"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.coverage.run]
omit = [
    "acoular/demo",
    "acoular/base.py",
    "acoular/tfastfuncs.py",
    "acoular/fastFuncs.py",
    "acoular/deprecation",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v --durations=10 --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "error", # treat warnings as errors
    "ignore::pluggy.PluggyTeardownRaisedWarning", # raised internally by pytest-regtest
    "ignore:numpy.core.multiarray is deprecated*:DeprecationWarning", # raised internally by pylops
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning", # raised internally by traits
    "ignore:The TBB threading layer requires TBB version:numba.core.errors.NumbaWarning", # raised internally by numba
    "ignore:FNV hashing is not implemented in Numba:UserWarning", # raised internally by numba
    # Suppress warnings about unclosed files in tables at the end of the tests
    "ignore:Closing remaining open file*:tables.exceptions.UnclosedFileWarning",
]
env = [
    "OPENBLAS_NUM_THREADS=1",
]

[tool.ruff]
extend = ".venv/share/ruff/ruff.acoular.toml"
extend-exclude = ["docs/source", "tests/unsupported"]

[tool.ruff.lint.per-file-ignores]
"!acoular/*" = ["D"]
"acoular/__init__.py" = ["F401"]
"acoular/demo/__init__.py" = ["F401"]
"acoular/tools/__init__.py" = ["F401"]
"acoular/aiaa/__init__.py" = ["F401"]
"acoular/environments.py" = ["N806"]
"acoular/fastFuncs.py" = ["N802", "N803", "N806", "N999"] # allow different naming convention
"acoular/fbeamform.py" = ["N806", "B023"]
"acoular/sources.py" = ["N806"]
"acoular/tools/helpers.py" = ["D205"]
"acoular/tprocess.py" = ["N806"]
"tests/cases/*" = ["N802"]
"examples/*" = ["A001", "B007", "D4", "E4", "E701", "F4", "UP036", "SIM108", "SLF001", "INP001"]
